--- a/index19.html
+++ b/index19.html
@@ -1,4 +1,3 @@
-
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -226,7 +225,7 @@ Files & Publications</div>
       <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soundbox">
     </div>
   </div>
-  <center><p><a href="#work" class="w3-button w3-black "><i class="fa fa-th"> </i>More  Projects</a></p></center>
+  <center><p><a href="#work" class="w3-button w3-black "><i class="fa fa-th"> </i> More  Projects</a></p></center>
   </div>
 
 <!-- Modal for full size images on click-->
@@ -278,8 +277,17 @@ Files & Publications</div>
   <a href="https://gr.linkedin.com/in/alexandrospapaspyrou" title="Linkedin"><i class="fa fa-linkedin w3-hover-opacity"></i></a> | 
   <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:280px;" alt="Signature" align="bottom">
 </footer>
- 
+   <!-- googletagmanager -->
+<!--  
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128580719-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-128580719-1');
+</script>
+-->
 <script>
 // Modal Image Gallery
 function onClick(element) {
