--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ ENJOY THE 2019 VERSION...EARLIER !!! NEW MENU / NEW APPS / NEW CONTENT
 -->
 <!DOCTYPE html>
 <html>
-<title>Papaspyrou</title>
+<title>Papaspyrou | index</title>
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -53,26 +53,25 @@ body, html { height: 100%; line-height: 1.8;}
 <!--  ////////////////////////// QR  ////////////////////////// -->
 <!-- ////////////////////////// Navbar ////////////////////////// -->
 <div class="w3-top">
-  <div class="w3-bar w3-gray w3-card w3-opacity-min w3-hover-opacity-off" id="myNavbar">
+  <div class="w3-bar w3-black w3-card" id="myNavbar">
     <a href="https://alexandroshub.github.io/index.html" class="w3-bar-item w3-button w3-wide">
-<img src="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:27px;" class="w3-left w3-hover-opacity"> &nbsp; 
+<img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" style="width:27px;" class="w3-left w3-hover-opacity"> &nbsp; 
 <b> Papaspyrou</b><span class="w3-hide-small w3-hide-medium"> Alexandros</span></a>
     <!-- Right-sided navbar links -->
     <div class="w3-right ">
-       <a href="#port" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> Portfolio</a>
-      <a href="#me" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user-o"></i> Me</a>
+    <a href="#port" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"> </i>  Portfolio</a>
+    <a href="#me" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user-o"> </i>  Me</a>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
-    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-black " onclick="w3_open()">
-      <i class="fa fa-bars"></i></a>
+    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-black" onclick="w3_open()"><i class="fa fa-bars"></i></a>
   </div>
-</div>  </div> 
-
+ </div>  
+</div>
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red">Close ×</a>
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red"> Close ×</a>
   <a href="https://alexandroshub.github.io/portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="fa fa-send-o"></i>&nbsp;  Portfolio</a>
 	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> &nbsp;  CV </a> 
-	<a href="https://robodayblog.wordpress.com/" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-green"><i class="fa fa-commenting-o"></i>  &nbsp; Blog</a> 
+	<a href="https://robodayblog.wordpress.com/" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-green"><i class="fa fa-coffee"></i>  &nbsp; Blog</a> 
     <a href="https://alexandroshub.github.io/links.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-purple"><i class="fa fa-link"></i>  &nbsp; Links</a> 
     <hr>
     ENJOY THE 2019 VERSION
@@ -87,18 +86,19 @@ body, html { height: 100%; line-height: 1.8;}
   <div class="w3-display-left w3-text-white" style="padding:48px">
     <span class="w3-jumbo w3-hide-small">Welcome</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Welcome</span><br>
-
 <body onload="typeWriter()">
 <p id="demo" class="w3-large"></p>
+<!--
 <script>
 var i = 0;
 var txt = "Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία, όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία .... ";
 var speed = 40; function typeWriter() {
 if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i); i++; setTimeout(typeWriter, speed);}}
-</script>
+</script> 
+-->
 </body>
-<!-- <span class="w3-large">Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία,<br> όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία..</span> -->
-    <p><a href="https://robodayblog.wordpress.com/" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">BLOG</a></p>
+	<span class="w3-large">Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία,<br> όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία..</span>
+    <p><a href="https://robodayblog.wordpress.com/" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off"><i class="fa fa-coffee"></i><b> BLOG</b></a></p>
   </div> 
  <span class="w3-hide-small">
   
@@ -119,12 +119,14 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 </div></span>
 </header>
 
+<div class="w3-center w3-padding-64"><span class="w3-xlarge w3-border-dark-grey w3-padding-16">"Aν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας." </span><br>Thomas Edison</div>
+
 <!-- Promo Section - "We know design" -->
-<div class="w3-container w3-light-grey" style="padding:70px 16px"  id="port">
-  <div class="w3-row-padding">
+<div class="w3-container w3-light-grey" style="padding:45px 16px"  id="port">
+  <div class="w3-row-padding"><br>
     <div class="w3-col m6">
       <h3>Coding Time.</h3>
-      <p><i>"Aν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας."</i> <br><b>Thomas Edison</b></p>
+  <p><i>"Aν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας."</i> <br><b>Thomas Edison</b></p>
       <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> Coding Projects</a></p>
     </div>
     <div class="w3-col m6">
@@ -140,7 +142,7 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 <br>} 
 <br>}
 </div>
-<!--  ----------------- -->
+<!--  ---------------------------------- -->
     </div>
   </div>
 </div>
@@ -166,20 +168,16 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 </div>
 <!-- end of Section "Statistics" -->
 <!-- MAIN Section //////////////////////////////////////////////////////////-->
-<div class="w3-center w3-dark-grey w3-padding-16">
+<div class="w3-center w3-padding-16">
 	<div class="w3-row-padding">
 <!-- 1 -->    
 <div class="w3-col l3 m6 w3-margin-bottom">
   <div class="w3-display-container">
-    <div class="w3-display-topleft w3-red w3-padding">Electronics</div>
+    <div class="w3-display-topleft w3-black w3-padding">Electronics</div>
     <div class="w3-display-bottomleft w3-black w3-padding" onclick="alrtFunction()" >
     <i class="fa fa-info"></i></div> 
 	<script> function alrtFunction(){alert("c\n\nΟ πιο απλός αυτοματισμός μπορεί να είναι ένας φωτοδιακόπτης.\nΌταν βραδιάζει, ανάβουν τα φώτα του σπιτιού.");}</script>
-    <div class="w3-display-bottomright w3-red w3-padding">
-      <a href="https://issuu.com/a-papaspyrou/docs/michatron_papaspyrou_alexandros"><i class="fa fa-file-text-o"></i></a>
-      <a href="https://vimeo.com/141997888"><i class="fa fa-vimeo"></i></a>
-      <a href="https://codebender.cc/embed/sketch:208552#Michatron.ino"><i class="fa fa-code"></i></a>
-    </div>
+   
     <a href="https://alexandroshub.github.io/proj_code.html">
     <img src="https://c2.staticflickr.com/3/2817/32706842880_b828022e51_o.png" alt="olt" style="width:100%"></a>
   </div>  
@@ -196,37 +194,21 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 <!-- 3 -->     
 <div class="w3-col l3 m6 w3-margin-bottom"><div class="w3-display-container">
 <a href="https://alexandroshub.github.io/proj_auto.html">
-<div class="w3-display-topleft w3-black w3-padding">Automations & Robotics</div>
-<img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Michatron" style="width:100%"></a></div></div>
+<div class="w3-display-topleft w3-white w3-padding">Automations & Robotics</div>
+<img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Michatron" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"></a></div></div>
 <!-- 4 --> 
 <div class="w3-col l3 m6 w3-margin-bottom"><div class="w3-display-container">
 <a href="https://alexandroshub.github.io/proj_files.html">
 <div class="w3-display-topleft w3-white w3-padding">
 Files & Publications</div>
-<img src="https://c2.staticflickr.com/1/572/32932636012_c6413d21b5_o.png" alt="Files" style="width:100%">
+<img src="https://c2.staticflickr.com/1/572/32932636012_c6413d21b5_o.png" alt="Files" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
 </a></div></div>
 </div>
+<center><p><a href="#work" class="w3-button w3-black "><i class="fa fa-th"> </i> More  Projects</a></p></center>
 </div>
 <!-- ////////////////////////////////////////////////////////// -->
-<!-- Work Section -->
-<div class="w3-container" style="padding:60px 16px">
-   <div class="w3-row-padding" style="margin-top:16px">
-    <div class="w3-col l3 m6">
-      <img src="https://c2.staticflickr.com/3/2817/32706842880_b828022e51_o.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Το κύκλωμα του Φωτοδιακόπτη">
 
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A phone">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="https://c2.staticflickr.com/3/2817/32706842880_b828022e51_o.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A drone">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soundbox">
-    </div>
-  </div>
-  <center><p><a href="#work" class="w3-button w3-black "><i class="fa fa-th"> </i> More  Projects</a></p></center>
-  </div>
+
 
 <!-- Modal for full size images on click-->
 <div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
