--- a/log.html
+++ b/log.html
@@ -19,7 +19,7 @@ body, html {
 }
 
 .bgimg {
-    background-image: url('https://cdn.pixabay.com/photo/2015/03/26/10/58/apple-692186_960_720.jpg');
+    background-image: url('https://66.media.tumblr.com/1e506e2b537a8bbb3ec33ec7e49abe7c/tumblr_phxzxohqBO1si59zfo1_1280.jpg');
     height: 100%;
     background-position: center;
     background-size: cover;
@@ -38,7 +38,7 @@ body, html {
   </div>
  <div class="w3-display-middle w3-large" style="padding:14px 28px">
     <p>
- <img src="https://www.freepngimg.com/thumb/enter/2-2-enter-png-picture-thumb.png " style="width:150px;" class="w3-left w3-hover-opacity" onclick="typeWriter()"> 
+ <img src="https://66.media.tumblr.com/14d28c72621e1e20cac18e9191892037/tumblr_phxzo1Nyq81si59zfo1_250.png " style="width:170px;" class="w3-left w3-hover-opacity" onclick="typeWriter()"> 
 </p>
  </div>
    <div class="w3-display-topleft w3-large" style="padding:14px 28px">
