--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
   <div class="w3-row-padding"><br>
     <div class="w3-col m6">
       <h3>Coding Time.</h3>
-  <p><i>"Aν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας."</i> <br><b>Thomas Edison</b></p>
-      <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> Coding Projects</a></p>
+  <p><i>" Άν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας. "</i> <br><b>Thomas Edison</b></p>
+      <p><a href="https://alexandroshub.github.io/portfolio.html#code" class="w3-button w3-black"><i class="fa fa-th"> </i> Coding Projects</a></p>
     </div>
     <div class="w3-col m6">
      <!--    ================ -->
@@ -204,7 +204,7 @@ Files & Publications</div>
 <img src="https://c2.staticflickr.com/1/572/32932636012_c6413d21b5_o.png" alt="Files" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
 </a></div></div>
 </div>
-<center><p><a href="#work" class="w3-button w3-black "><i class="fa fa-th"> </i> More  Projects</a></p></center>
+<center><p><a href="https://alexandroshub.github.io/portfolio.html#projects" class="w3-button w3-black "><i class="fa fa-th"> </i> More  Projects</a></p></center>
 </div>
 <!-- ////////////////////////////////////////////////////////// -->
 
