--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 </div></span>
 </header>
 
-<div class="w3-center w3-padding-64"><span class="w3-xlarge w3-border-dark-grey w3-padding-16">"Aν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας." </span><br>Thomas Edison</div>
+<div class="w3-center w3-padding-64"><span class="w3-xlarge w3-border-dark-grey w3-padding-16">" Άν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας. "</span><br>Thomas Edison</div>
 
 <!-- Promo Section - "We know design" -->
 <div class="w3-container w3-light-grey" style="padding:45px 16px"  id="port">
@@ -208,8 +208,6 @@ Files & Publications</div>
 </div>
 <!-- ////////////////////////////////////////////////////////// -->
 
-
-
 <!-- Modal for full size images on click-->
 <div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
   <span class="w3-button w3-xxlarge w3-black w3-padding-large w3-display-topright" title="Close Modal Image">×</span>
@@ -245,11 +243,11 @@ Files & Publications</div>
   </div>
 </div>
 
-
 <div class="w3-center w3-padding-64"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Thanks For Watching</span></div>
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a> 
+<!-- top --> 
+<a href="#home" class="w3-button"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>
   <div class="w3-xlarge w3-section"></div>
   <!-- twitter --><a href=" https://twitter.com/A_Papaspyrou" title="Twitter"><i class="fa fa-twitter w3-hover-opacity"></i></a>
   <!-- facebook -->
@@ -278,11 +276,8 @@ function onClick(element) {
   var captionText = document.getElementById("caption");
   captionText.innerHTML = element.alt;
 }
-
-
 // Toggle between showing and hiding the sidebar when clicking the menu icon
 var mySidebar = document.getElementById("mySidebar");
-
 function w3_open() {
     if (mySidebar.style.display === 'block') {
         mySidebar.style.display = 'none';
@@ -290,7 +285,6 @@ function w3_open() {
         mySidebar.style.display = 'block';
     }
 }
-
 // Close the sidebar with the close button
 function w3_close() {
     mySidebar.style.display = "none";
