--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -119,7 +120,7 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 </div></span>
 </header>
 
-<div class="w3-center w3-padding-64"><span class="w3-xlarge w3-border-dark-grey w3-padding-16">" Άν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας. "</span><br>Thomas Edison</div>
+<div class="w3-center w3-padding-64"><span class="w3-xlarge w3-border-dark-grey w3-padding-16">" Άν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας." </span><br>Thomas Edison</div>
 
 <!-- Promo Section - "We know design" -->
 <div class="w3-container w3-light-grey" style="padding:45px 16px"  id="port">
@@ -173,7 +174,7 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 <!-- 1 -->    
 <div class="w3-col l3 m6 w3-margin-bottom">
   <div class="w3-display-container">
-    <div class="w3-display-topleft w3-black w3-padding">Electronics</div>
+    <div class="w3-display-topleft w3-black w3-padding">Developing & Code</div>
     <div class="w3-display-bottomleft w3-black w3-padding" onclick="alrtFunction()" >
     <i class="fa fa-info"></i></div> 
 	<script> function alrtFunction(){alert("c\n\nΟ πιο απλός αυτοματισμός μπορεί να είναι ένας φωτοδιακόπτης.\nΌταν βραδιάζει, ανάβουν τα φώτα του σπιτιού.");}</script>
@@ -185,7 +186,7 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 <!-- 2 --> 
 <div class="w3-col l3 m6 w3-margin-bottom"><div class="w3-display-container">
 <a href="https://alexandroshub.github.io/proj_elec.html">
-<div class="w3-display-topleft w3-black w3-padding">Developing & Code  & IoT</div>
+<div class="w3-display-topleft w3-black w3-padding">Electronics & IoT</div>
 <img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" alt="IoT" style="width:100%"></a>
 <div class="w3-display-bottomleft w3-black w3-padding" onclick="al2tFunction()" >
     <i class="fa fa-info"></i></div>
@@ -208,6 +209,8 @@ Files & Publications</div>
 </div>
 <!-- ////////////////////////////////////////////////////////// -->
 
+
+
 <!-- Modal for full size images on click-->
 <div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
   <span class="w3-button w3-xxlarge w3-black w3-padding-large w3-display-topright" title="Close Modal Image">×</span>
@@ -226,7 +229,7 @@ Files & Publications</div>
     <p><a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-black"><i class="fa fa-user-o"></i> CV</a> <a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-blue"><i class="fa fa-linkedin w3-hover-opacity"></i></a></p>
    
     </div>
-    <div class="w3-col m6">
+<!--    <div class="w3-col m6">
       <p class="w3-wide"><i class="fa fa-laptop w3-margin-right"></i>Projects </p>
       <div class="w3-grey">
         <div class="w3-container w3-dark-grey w3-center" style="width:90%">90%</div>
@@ -239,9 +242,10 @@ Files & Publications</div>
       <div class="w3-grey">
         <div class="w3-container w3-dark-grey w3-center" style="width:75%">75%</div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
+
 
 <div class="w3-center w3-padding-64"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Thanks For Watching</span></div>
 <!-- Footer -->
@@ -257,17 +261,7 @@ Files & Publications</div>
   <a href="https://gr.linkedin.com/in/alexandrospapaspyrou" title="Linkedin"><i class="fa fa-linkedin w3-hover-opacity"></i></a> | 
   <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:280px;" alt="Signature" align="bottom">
 </footer>
-   <!-- googletagmanager -->
-<!--  
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128580719-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-128580719-1');
-</script>
--->
+ 
 <script>
 // Modal Image Gallery
 function onClick(element) {
@@ -290,9 +284,7 @@ function w3_close() {
     mySidebar.style.display = "none";
 }
 </script>
-<!-- OLD CHAT OR EMAIL https://www.tawk.to/  
-<script type="text/javascript"> var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date(); (function(){ var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0]; s1.async=true; s1.src='https://embed.tawk.to/57e80bcdbb785b3a47cafa79/default'; s1.charset='UTF-8'; s1.setAttribute('crossorigin','*');  s0.parentNode.insertBefore(s1,s0); }) ();</script> 
--->
+<!-- That's all folks! -->
 </body>
 <!--
 CC-BY:		Alexandros S. Papaspyrou
@@ -307,3 +299,25 @@ Support: 	alexispapy@outlook.com
 Sub: 		papaspyrou.alexandros@gmail.com
 -->
 </html>
+<!-- ============================================================================ -->
+<!-- ======================== FUTURE PARTS OF CODE ============================== -->
+<!-- ============================================================================ -->
+<!-- EMAIL FORM https://zotabox.com/dashboard/ -->
+<script type="text/javascript">(function(d,s,id){var z=d.createElement(s);z.type="text/javascript";z.id=id;z.async=true;z.src="//static.zotabox.com/7/1/7144a7b28e2afa4ba16adef6b404a508/widgets.js";var sz=d.getElementsByTagName(s)[0];sz.parentNode.insertBefore(z,sz)}(document,"script","zb-embed-code"));</script>
+	
+<!-- SUB & SHARE www.addthis.com/dashboard --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55942e200b33038e"></script> 
+
+<!-- OLD CHAT OR EMAIL https://www.tawk.to/ --> 
+<script type="text/javascript"> var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date(); (function(){ var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0]; s1.async=true; s1.src='https://embed.tawk.to/57e80bcdbb785b3a47cafa79/default'; s1.charset='UTF-8'; s1.setAttribute('crossorigin','*');  s0.parentNode.insertBefore(s1,s0); }) ();</script>
+
+<!-- googletagmanager -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128580719-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-128580719-1');
+</script>
+
+<!-- Πηγές:  https://www.w3schools.com  |  https://www.udacity.com  |   -->
+
