--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body, html { height: 100%; line-height: 1.8;}
  </div>  
 </div>
 <!-- Sidebar on small screens when clicking the menu icon -->
-<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left" style="display:none" id="mySidebar">
+<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-top" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red"> Close ×</a>
   <a href="https://alexandroshub.github.io/portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="fa fa-send-o"></i>&nbsp;  Portfolio</a>
 	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> &nbsp;  CV </a> 
@@ -126,13 +126,15 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 <div class="w3-container w3-light-grey" style="padding:45px 16px"  id="port">
   <div class="w3-row-padding"><br>
     <div class="w3-col m6">
-      <h3>Coding Time.</h3>
-  <p><i>" Άν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας. "</i> <br><b>Thomas Edison</b></p>
-      <p><a href="https://alexandroshub.github.io/portfolio.html#code" class="w3-button w3-black"><i class="fa fa-th"> </i> Coding Projects</a></p>
+   
+      <h3>About Me.</h3>
+      <p>Γεννήθηκα και μεγάλωσα στην Αθήνα και από μικρός κατάλαβα το ενδιαφέρον μου για την επιστήμη, τις τεχνολογίες και την πληροφορική, για αυτό και επέλεξα να σπουδάσω και να ασχοληθώ με αυτό το αντικείμενο, αναζητώντας πάντα νέες ευκαιρίες και πάντα ψάχνοντας για καινοτομία.</p>
+    <p><a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-black"><i class="fa fa-user-o"></i> CV</a> <a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-blue"><i class="fa fa-linkedin w3-hover-opacity"></i></a></p>
+     
     </div>
     <div class="w3-col m6">
      <!--    ================ -->
-
+   <h3>Coding Time.</h3>
 <div class="w3-row w3-hide-small" style="padding-bottom:30px">
 <font color="red">#</font><font color="blue">include </font>  
 <font color="green">"hello_world.h"</font>   
@@ -142,12 +144,12 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 <br>return<font color="green"> "Hello, World!"; </font>
 <br>} 
 <br>}
+ <p><a href="https://alexandroshub.github.io/portfolio.html#code" class="w3-button w3-black"><i class="fa fa-th"> </i> Coding Projects</a></p>
 </div>
 <!--  ---------------------------------- -->
     </div>
   </div>
 </div>
-
 <!-- Section "Statistics" - ->
 <div class="w3-container w3-row w3-center w3-dark-grey w3-padding-16">
   <div class="w3-quarter">
@@ -243,6 +245,8 @@ Files & Publications</div>
         <div class="w3-container w3-dark-grey w3-center" style="width:75%">75%</div>
       </div>
     </div> -->
+    
+     <img src="https://66.media.tumblr.com/442c9634fe2886cbd5125f22cc090087/tumblr_picpslSyeZ1si59zfo1_400.png" alt="Me" style="width:30%"> 
   </div>
 </div>
 
@@ -302,22 +306,23 @@ Sub: 		papaspyrou.alexandros@gmail.com
 <!-- ============================================================================ -->
 <!-- ======================== FUTURE PARTS OF CODE ============================== -->
 <!-- ============================================================================ -->
-<!-- EMAIL FORM https://zotabox.com/dashboard/ -->
+<!-- EMAIL FORM https://zotabox.com/dashboard/ ->
 <script type="text/javascript">(function(d,s,id){var z=d.createElement(s);z.type="text/javascript";z.id=id;z.async=true;z.src="//static.zotabox.com/7/1/7144a7b28e2afa4ba16adef6b404a508/widgets.js";var sz=d.getElementsByTagName(s)[0];sz.parentNode.insertBefore(z,sz)}(document,"script","zb-embed-code"));</script>
 	
-<!-- SUB & SHARE www.addthis.com/dashboard --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55942e200b33038e"></script> 
+<!-- SUB & SHARE www.addthis.com/dashboard -> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55942e200b33038e"></script> 
 
-<!-- OLD CHAT OR EMAIL https://www.tawk.to/ --> 
+<!-- OLD CHAT OR EMAIL https://www.tawk.to/ -> 
 <script type="text/javascript"> var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date(); (function(){ var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0]; s1.async=true; s1.src='https://embed.tawk.to/57e80bcdbb785b3a47cafa79/default'; s1.charset='UTF-8'; s1.setAttribute('crossorigin','*');  s0.parentNode.insertBefore(s1,s0); }) ();</script>
 
-<!-- googletagmanager -->
+<!-- googletagmanager ->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128580719-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
   gtag('config', 'UA-128580719-1');
-</script>
+</script> 
+-->
 
 <!-- Πηγές:  https://www.w3schools.com  |  https://www.udacity.com  |   -->
 
