--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,3 @@
-
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -51,8 +50,7 @@ body, html {
   logged_in_greeting="Hi! How can i help you?"
   logged_out_greeting="Hi! How can i help you?">
 </div>
-<!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
-
+<!--  ////////////////////////// messenger_platform  ////////////////////////// -->   
 <!-- ////////////////////////// Navbar ////////////////////////// -->
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card" id="myNavbar">
@@ -109,6 +107,7 @@ function w3_close() {mySidebar.style.display = "none";} </script>
   </div>
 </header>
 
+<div class="w3-center w3-padding-64"><span class="w3-large w3-border-dark-grey w3-padding-16">" Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία, όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία." </span><br>-</div>
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-sand  w3-large">
 
@@ -123,14 +122,7 @@ function w3_close() {mySidebar.style.display = "none";} </script>
  
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Catalogue</span></h5>
   
-    <div class="w3-row w3-center w3-card w3-padding">
-      <a href="javascript:void(0)" onclick="openMenu(event, 'Eat');" id="myLink">
-        <div class="w3-col s6 tablink"><i class="fa fa-folder-open-o w3-margin-bottom w3-jumbo"></i></div>
-      </a>
-      <a href="javascript:void(0)" onclick="openMenu(event, 'Drinks');">
-        <div class="w3-col s6 tablink"> <i class="fa fa-gears w3-margin-bottom w3-jumbo"></i></div>
-      </a>
-    </div>
+   
 
     <div id="Eat" class="w3-container menu w3-padding-48 w3-card">        
 <!--NUM Section ////////////////////////////////////////////////////////// -->
@@ -141,28 +133,11 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 <a href="https://www.dropbox.com/sh/63m0fmvfn96rwd5/AAA3YfooM9GAUJk_eMntRQjga?dl=0"><i class="fa fa-dropbox"></i></a>
 <a href="https://www.dropbox.com/sh/a17b3xchllgy4j9/AAA4G9X0O5gAYg0MqqYIc8qva?dl=0"><i class="fa fa-dropbox"></i></a></span></div>
 </div>
- 
-
-
-<div id="Drinks" class="w3-container menu w3-padding-48 w3-card">
-    
-<br> <span class="w3-xlarge">Projects</span><br>  
-  <br><span class="w3-tag w3-small w3-red"><a href="https://alexandroshub.github.io/arduino.html"><b>ARDUINO</b></a></span>
-  <br><span class="w3-tag w3-small w3-red"><a href="https://alexandroshub.github.io/raspberrypi"><b>raspberrypi</b></a></span>
-    <br><span class="w3-tag w3-small w3-black"><b> Το κύκλωμα του Φωτοδιακόπτη</b><a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>
-
-<br><span class="w3-tag w3-small w3-black"><b> Μελέτη και Κατασκευή Μichatron</b><a href="https://issuu.com/a-papaspyrou/docs/michatron_papaspyrou_alexandros"><i class="fa fa-file-text-o"></i></a>
-<a href="https://vimeo.com/141997888"><i class="fa fa-vimeo"></i></a>
-<a href="https://codebender.cc/embed/sketch:208552#Michatron.ino"><i class="fa fa-code"></i></a></span>
-    </div>  
   </div>
 </div>
  </div>
  </div>
-<h5 class="w3-center w3-padding-64" id="projects">
-   <span class="w3-tag w3-wide">Projects</span></h5>
-   
-     
+<div class="w3-center w3-padding-64" id="projects"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Projects</span></div>    
 <!-- Promo Section - "We know design" -->
 <div class="w3-container w3-light-gray w3-grayscale-min" style="padding:40px 16px"  id="port">
   <div class="w3-row-padding"><br>
@@ -172,7 +147,6 @@ function w3_close() {mySidebar.style.display = "none";} </script>
           </div>
     <div class="w3-col m6">
      <!--    ================ -->
-
 <div class="w3-row w3-hide-small" style="padding-bottom:30px">
 <div class="w3-center">
   <!-- Main video --><p>
@@ -189,39 +163,33 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 	<span class="w3-tag w3-small w3-gray"> 
 <a id="video_two" href="https://www.youtube.com/embed/takpmt5s5Ho" target="video_feature"><b>PLC - Ταινία Μεταφοράς</b></a></span>
 <br></p></div>
-
 </div>
 <!--  ---------------------------------- -->
-    </div>
+   </div>
   </div>
+ </div> 
 </div> 
-   
-   
-   
-   
-   <!--BLOG Section ////////////////////////////////////////////////////////// ->
+<!--BLOG Section ////////////////////////////////////////////////////////// ->
 <div class="w3-center">
 <iframe src="https://robodayblog.wordpress.com" height="400" width="75%"></iframe>
 </div>
 <!-- ////////////////////////////////////////////////////////// -->
-
+<div class="w3-center w3-padding-64" id="publications"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Publications</span></div>
 <!-- Promo computerevolution --><div class="w3-container w3-row w3-center w3-blue w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-red"> Publications</span><br><b>“ Η εξέλιξη των Η/Υ ”</b> (από τον άβακα στο Tablet) Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας. <span class="w3-tag w3-small w3-red"><a href="https://issuu.com/a-papaspyrou/docs/computerevolution_alexandros_papasp"><i class="fa fa-file-text-o"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-red"><a href="https://www.slideshare.net/alexandrospapaspurou/computer-evolution-48891311"><i class="fa fa-slideshare"></i></a></span></div><!-- END Promo  -->
-<br><br><br>
+<!-- Promo fotodiakoptis--><div class="w3-container w3-row w3-center w3-red w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-yellow"> Publications</span><br><b>“ Το κύκλωμα του Φωτοδιακόπτη ”</b> χχ. <span class="w3-tag w3-small w3-yellow"><a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><i class="fa fa-dropbox"></i></a></span></div><!-- END Promo  -->
+<!-- Promo Michatron--><div class="w3-container w3-row w3-center w3-gray w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-black"> Publications</span><br><b>“ Μελέτη και Κατασκευή Μichatron ”</b> Το Michatron, ξεκινάει με μη χειροκίνητο τρόπο, ακολουθεί μια μαύρη γραμμή, προσπερνάει τα εμπόδια και σταματάει αυτόματα.<span class="w3-tag w3-small w3-black"><a href="https://issuu.com/a-papaspyrou/docs/michatron_papaspyrou_alexandros"><i class="fa fa-file-text-o"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-black"><a href="https://codebender.cc/embed/sketch:208552#Michatron.ino"><i class="fa fa-code"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-black"><a href="https://vimeo.com/141997888"><i class="fa fa-vimeo"></i></a></span></div> <!-- END Promo  -->
 <!-- Promo MPPT--><div class="w3-container w3-row w3-center w3-purple w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-green"> Publications</span><br><b>“ Τεχνικές MPPT ”</b> Ανάλυση τεχνικών ανίχνευσης σημείου μέγιστης ισχύος φωτοβολταϊκού. <span class="w3-tag w3-small w3-green"><a href="https://issuu.com/a-papaspyrou/docs/mppt_final"><i class="fa fa-file-text-o"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-green"><a href="https://www.slideshare.net/alexandrospapaspurou/mppt-30080120"><i class="fa fa-slideshare"></i></a></span></div> <!-- END Promo  -->
 
-    <h5 class="w3-center w3-padding-64" id="code">
-   <span class="w3-tag w3-wide">CODE</span></h5>
-   
-   
-   
 <!-- Promo Section - "We know design" -->
 <div class="w3-container w3-light-grey w3-grayscale-min" style="padding:40px 16px"  id="port">
-  <div class="w3-row-padding"><br>
+  <div class="w3-row-padding">
+  <div class="w3-center w3-padding-64" id="code"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Coding Time</span></div>
     <div class="w3-col m6">
-      <h3>Coding Time.</h3>
-		<p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> Coding Projects</a></p>
+    <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> Coding Projects</a></p>
        <span class="w3-tag w3-small w3-red"><a href="https://alexandroshub.github.io/cpp.html"><b>C / C++</b></a></span>
     <br><span class="w3-tag w3-small w3-red"><a href="https://alexandroshub.github.io/python.html"><b>Python</b></a></span>
+     <br><span class="w3-tag w3-small w3-red"><a href="https://alexandroshub.github.io/arduino.html"><b>ARDUINO</b></a></span>
+  <br><span class="w3-tag w3-small w3-red"><a href="https://alexandroshub.github.io/raspberrypi"><b>raspberrypi</b></a></span>
     </div>
     <div class="w3-col m6">
      <!--    ================ -->
@@ -244,17 +212,12 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 <!-- Promo computerevolution --><div class="w3-container w3-row w3-center w3-green w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-pink"> GAME</span><br><b>“kremaλa”</b> Παιχνίδι σε VisualBasic για PC <span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/rnfdz5moi5n1mx8/_kremaλa_%20.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/j5lomf3k4fssn0c/_kremalaki2_.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/sh/uv2qaxzz310wmmf/AACtuaf3OciKJpqucZzBbcc1a?dl=0"><i class="fa fa-code"></i></a></span></div><!-- END Promo  -->
 
 
-<!--Videos Section ////////////////////////////////////////////////////////// ->
-
-<!- END videos ///////////////////////////////////////////////////////// -->
-
-
-<!-- End page content -->
-<div class="w3-center w3-padding-64"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Thanks For Watching</span></div></div>
+<div class="w3-center w3-padding-64"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Thanks For Watching</span></div>
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a> 
- 
+<!-- top --> 
+<a href="#home" class="w3-button"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>
+  <div class="w3-xlarge w3-section"></div>
   <!-- twitter --><a href=" https://twitter.com/A_Papaspyrou" title="Twitter"><i class="fa fa-twitter w3-hover-opacity"></i></a>
   <!-- facebook -->
   <a href="https://www.facebook.com/papaspyrou.a" title="Facebook"><i class="fa fa-facebook-f w3-hover-opacity">
@@ -263,7 +226,6 @@ function w3_close() {mySidebar.style.display = "none";} </script>
   <a href="https://gr.linkedin.com/in/alexandrospapaspyrou" title="Linkedin"><i class="fa fa-linkedin w3-hover-opacity"></i></a> | 
   <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:280px;" alt="Signature" align="bottom">
 </footer>
-
 
 <script> // Tabbed Menu
 function openMenu(evt, menuName) {
