--- a/portfolio.html
+++ b/portfolio.html
@@ -1,3 +1,4 @@
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -109,41 +110,22 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 
 <div class="w3-center w3-padding-64"><span class="w3-large w3-border-dark-grey w3-padding-16">" Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία, όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία." </span><br>-</div>
 <!-- Add a background color and large text to the whole page -->
-<div class="w3-sand  w3-large">
-
+<div class="w3-large">
 <!-- About Container -->
-<div class="w3-container" id="about">
-  <div class="w3-content" style="max-width:1000px">
-
- 
- <!-- Menu Container -->
-<div class="w3-container" id="menu">
-  <div class="w3-content" style="max-width:950px">
- 
-    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Catalogue</span></h5>
-  
-   
-
-    <div id="Eat" class="w3-container menu w3-padding-48 w3-card">        
-<!--NUM Section ////////////////////////////////////////////////////////// -->
-<div class="w3-row w3-center">
-   <span class="w3-xlarge">Files</span>
-   <br><span class="w3-tag w3-small w3-black"><b> Αρχείο με τις εργασίες μου</b>
-<a href="https://www.dropbox.com/sh/y7j320ldle8678d/AABMt-dGKjWB1ty2JnuflvcUa?dl=0"><i class="fa fa-dropbox"></i></a>
-<a href="https://www.dropbox.com/sh/63m0fmvfn96rwd5/AAA3YfooM9GAUJk_eMntRQjga?dl=0"><i class="fa fa-dropbox"></i></a>
-<a href="https://www.dropbox.com/sh/a17b3xchllgy4j9/AAA4G9X0O5gAYg0MqqYIc8qva?dl=0"><i class="fa fa-dropbox"></i></a></span></div>
-</div>
-  </div>
-</div>
- </div>
- </div>
+<div class="w3-container" id="about"></div>
 <div class="w3-center w3-padding-64" id="projects"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Projects</span></div>    
 <!-- Promo Section - "We know design" -->
 <div class="w3-container w3-light-gray w3-grayscale-min" style="padding:40px 16px"  id="port">
   <div class="w3-row-padding"><br>
     <div class="w3-col m6">
       <h3>x.</h3>
-		<p><a href="#prointro" class="w3-button w3-black"><i class="fa fa-th"> </i> x</a></p>
+		<p><a href="#prointro" class="w3-button w3-black"><i class="fa fa-th"> </i> x</a>
+        
+         <span class="w3-xlarge">Files</span>
+   <br><span class="w3-tag w3-small w3-black"><b> Αρχείο με τις εργασίες μου</b>
+<a href="https://www.dropbox.com/sh/y7j320ldle8678d/AABMt-dGKjWB1ty2JnuflvcUa?dl=0"><i class="fa fa-dropbox"></i></a>
+<a href="https://www.dropbox.com/sh/63m0fmvfn96rwd5/AAA3YfooM9GAUJk_eMntRQjga?dl=0"><i class="fa fa-dropbox"></i></a>
+<a href="https://www.dropbox.com/sh/a17b3xchllgy4j9/AAA4G9X0O5gAYg0MqqYIc8qva?dl=0"><i class="fa fa-dropbox"></i></a></span></p>
           </div>
     <div class="w3-col m6">
      <!--    ================ -->
@@ -210,7 +192,6 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 </div>
 
 <!-- Promo computerevolution --><div class="w3-container w3-row w3-center w3-green w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-pink"> GAME</span><br><b>“kremaλa”</b> Παιχνίδι σε VisualBasic για PC <span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/rnfdz5moi5n1mx8/_kremaλa_%20.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/j5lomf3k4fssn0c/_kremalaki2_.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/sh/uv2qaxzz310wmmf/AACtuaf3OciKJpqucZzBbcc1a?dl=0"><i class="fa fa-code"></i></a></span></div><!-- END Promo  -->
-
 
 <div class="w3-center w3-padding-64"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Thanks For Watching</span></div>
 <!-- Footer -->
